RESOLVED FIXED196813
REGRESSION: changing iPad orientation on blogger.com crashes under RemoteScrollingCoordinatorProxy::establishLayerTreeScrollingRelations()
https://bugs.webkit.org/show_bug.cgi?id=196813
Summary REGRESSION: changing iPad orientation on blogger.com crashes under RemoteScro...
Antti Koivisto
Reported 2019-04-11 04:28:43 PDT
Add some null checks.
Attachments
patch (2.72 KB, patch)
2019-04-11 04:35 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-04-11 04:30:52 PDT
Antti Koivisto
Comment 2 2019-04-11 04:35:17 PDT
WebKit Commit Bot
Comment 3 2019-04-11 11:10:02 PDT
Comment on attachment 367213 [details] patch Clearing flags on attachment: 367213 Committed r244192: <https://trac.webkit.org/changeset/244192>
WebKit Commit Bot
Comment 4 2019-04-11 11:10:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.