REGRESSION: changing iPad orientation on blogger.com crashes under RemoteScrollingCoordinatorProxy::establishLayerTreeScrollingRelations() https://bugs.webkit.org/show_bug.cgi?id=196813 <rdar://problem/49393264>

Reviewed by Simon Fraser.

No test, can't repro.

* UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
(WebKit::RemoteScrollingCoordinatorProxy::establishLayerTreeScrollingRelations):

Null check the nodes.


Canonical link: https://commits.webkit.org/211102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244192 268f45cc-cd09-0410-ab3c-d52691b4dbfc